@@ -21,6 +21,8 @@ on GitHub.
 
 * The `@API` annotation has been removed from the `junit-platform-commons` project and
   relocated to a new standalone project on GitHub called the _@API Guardian_.
+* Tags are no longer permitted to contain any of the following _reserved characters_.
+  - `,`, `(`, `)`, `&`, `|`, `!`
 * The constructor for `FilePosition` has been replaced with a static factory method named
   `from(int, int)`.
 * A `FilePosition` can now be constructed solely from a line number via the new
